fix: validation errors docs
